server: wip engine lib: use foreign api