@@ -5,7 +5,6 @@ import org.junit.jupiter.api.Test;
 import java.lang.reflect.Field;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -17,12 +16,12 @@ public class ListItemTest {
         Field[] itemFields = ListItem.class.getFields();
         List<String> itemFieldsNames = Arrays.stream(itemFields)
                 .map(Field::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         Field[] allFields = Pursuit.class.getFields();
         List<String> allFieldsNames = Arrays.stream(allFields)
                 .map(Field::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Field field : itemFields) {
             var idx = allFieldsNames.indexOf(field.getName());
